# axum_backend

./: Cargo.toml  file.txt  script.sql
src/: main.rs
src/app_state_mod/: mod.rs
src/app_state_mod/mc_mod/: mod.rs
src/app_state_mod/mc_mod/sales_order_impl/: get_impl.rs  mod.rs
src/error_mod/: mod.rs
src/error_mod/sales_order_error_mod/: get_error.rs  mod.rs
src/lib/: lib.rs
src/lib/error_mod/: mod.rs
src/lib/model_controller_mod/: mod.rs  sales_order_impl.rs
src/lib/routers_mod/: mod.rs
src/lib/routers_mod/sales_order_mod/: mod.rs
src/lib/routers_mod/sales_order_mod/get_handlers_mod/: handlers.rs  mod.rs  models.rs  structs.rs  traits.rs
src/lib/server_start_mod/: mod.rs
src/mw_mod/: mod.rs
src/router_mod/: mod.rs
src/router_mod/sales_order_route_mod/: mod.rs
src/router_mod/sales_order_route_mod/get_router_mod/: mod.rs  trait_mod.rs
