[package]
name = "axum_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src\\lib\\lib.rs"

[dependencies]
axum = "0.7.2"
odbc-api = "4.0.1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
